<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stude</string>
    <string name="Stude">Stude</string>
    <string name="Disciplinas">Disciplinas</string>
    <string name="Cronograma">Cronograma</string>
    <string name="Desempenho">Desempenho</string>

    <string name="PriIntervalo">Primeiro Intervalo</string>
    <string name="SegIntervalo">Segundo Intervalo</string>
    <string name="TerIntervalo">Terceiro Intervalo</string>
    <string name="pressToStart">Aperte o botão para\n ativar a cronometragem!</string>

    <string name="cadastre">Cadastre uma disciplina aqui:</string>
    <string name="nome">Nome da disciplina:</string>
    <string name="dificuldade">Qual seria a dificuldade?</string>
    <string name="dificil">Difícil</string>
    <string name="facil">Fácil</string>
    <string name="cor">Escolha uma cor:</string>
    <string name="escolherCor">Escolher</string>
    <string name="salvarDisc">Salvar</string>
    <string name="cancelarDisc">Cancelar</string>
    <string name="excluirDisc">Excluir</string>

    <string name="desempenhoText1">Aqui estão seus minutos de estudos:</string>
    <string name="desempenhoText2">Deslize para cima ou para baixo para vizualizar outras disciplinas.</string>

    <string-array name="titles_tab">
        <item>Stude</item>
        <item>Disciplinas</item>
        <item>Cronograma</item>
        <item>Desempenho</item>
    </string-array>

    <string name="checkCondicoes">Li e aceito as condições</string>
    <string name="buttonCancelar">Cancelar</string>
    <string name="buttonContinuar">Continuar</string>
    <string name="textTermos">Termos e Condições:</string>
    <string name="textCondicoes">
        \n LEIA! IMPORTANTE! \n\n
        O Stude é um aplicativo voltado para pessoas que desejam gerenciar suas disciplinas e ao mesmo tempo
        ter uma boa prática de estudo. Baseado no Pomodoro, o Stude oferece um método que permite treinar
        sua mente para melhores resultados nas horas de estudo. \n \n

        É importante ressaltar que o Stude não irá garantir um bom desempenho em seus testes, isso depende
        apenas de você. O Stude apenas irá lhe guiar em suas metas de aprendizado. \n \n

        O aplicativo oferece um Cronometro marcado com metas que dividem seu tempo de estudo e lazer. Também
        oferece um sistema de gerência de disciplina onde você pode salvá-las e alterá-las ao longo do tempo.
        Há um gráfico que mostrará as horas que você estudou e se cumpriu a cota de horas de um certo dia.
    </string>

</resources>

