<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nome"
        android:id="@+id/nomeDisciplina"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nomeDisc"
        android:layout_below="@+id/nomeDisciplina"
        android:layout_alignRight="@+id/radioDific"
        android:layout_alignEnd="@+id/radioDific"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dificuldade"
        android:id="@+id/dificuldadeText"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/nomeDisc"
        android:layout_alignLeft="@+id/radioDific"
        android:layout_alignStart="@+id/radioDific" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dificuldadeText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/radioDific"
        android:layout_above="@+id/colorText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dificil"
            android:id="@+id/dificilButton"
            android:textSize="25dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/facil"
            android:id="@+id/facilButton"
            android:textSize="25dp"
            android:layout_marginTop="15dp"
            android:checked="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cor"
        android:id="@+id/colorText"
        android:layout_above="@+id/picker"
        android:layout_alignLeft="@+id/radioDific"
        android:layout_alignStart="@+id/radioDific" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvarDisc"
        android:id="@+id/salvarDisc"
        android:background="#4daf51"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <uz.shift.colorpicker.LineColorPicker
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/picker"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:orientation="horizontal"
        android:layout_above="@+id/thatColor"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/thatColor"
        android:layout_above="@+id/salvarDisc"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>