<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nome"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/editarNome"
        android:layout_alignStart="@+id/editarNome" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editarNome"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cor"
        android:id="@+id/cor"
        android:layout_below="@+id/editarNome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <uz.shift.colorpicker.LineColorPicker
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/colorPicker"
        android:layout_width="396dp"
        android:layout_height="60dp"
        app:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cor" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/salvarDisc"
        android:id="@+id/editarDisc"
        android:background="#4daf51"
        android:layout_below="@+id/thatColor"
        android:layout_toRightOf="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginLeft="39dp"
        android:layout_marginStart="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/thatColor"
        android:layout_below="@+id/colorPicker"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/excluirDisc"
        android:id="@+id/buttonExcluir"
        android:layout_alignTop="@+id/editarDisc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#dd3535" />
</RelativeLayout>